--- a/SmartCity-AR/task1.html
+++ b/SmartCity-AR/task1.html
@@ -9,7 +9,7 @@
             <!-- handle hiro marker -->
             <a-marker preset='hiro'>
                 <a-box position='0 0.5 0' material='opacity: 0.5; side: double;color:red;'>
-                    <a-tetrahedron color="#FF926B" radius="5"></a-tetrahedron>
+                    <a-sphere color="yellow" radius="5"></a-sphere>
                 </a-box>
             </a-marker>
 
