--- a/SmartCity-AR/task1.html
+++ b/SmartCity-AR/task1.html
@@ -8,7 +8,7 @@
         <a-scene embedded arjs>
             <!-- handle hiro marker -->
             <a-marker preset='hiro'>
-                    <a-text value="One Puuuuuuunch!"></a-text>
+                    <a-text value="One Puuuuuuunch!" scale="120 120 120"></a-text>
             </a-marker>
 
             <!-- add a camera to the scene that renders the objects for us -->
