--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <ul>
         <!-- navigation to the solutions of tasks -->
         <li><a href="SmartCity-AR/task1.html">Task 1</a></li>
-        <li><a href="SmartCity-AR/task2.html">Task B</a></li>
-		<li><a href="SmartCity-AR/task3.html">Task 3</a></li>
+        <li><a href="SmartCity-AR/task2.html">Task 2 Complex objects</a></li>
+		<li><a href="SmartCity-AR/task3.html">Task 3 Embedded audio</a></li>
+		<li><a href="SmartCity-AR/task3V.html">Task 3 Embedded video</a></li>
+		<li><a href="SmartCity-AR/task4.html">Task 4 Multiple markers</a></li>
 		
 		
 
