--- a/SmartCity-AR/task3V.html
+++ b/SmartCity-AR/task3V.html
@@ -8,6 +8,7 @@
         <a-scene embedded arjs>
             <a-assets>
                 <video id="helmet_video" src="assets/helmet1.mp4" response-type="arraybuffer" autoplay="true" loop></video>
+				<a-asset-item id="helmet" src="https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/KhronosGroup/glTF-Sample-Models/master/2.0/SciFiHelmet/glTF/SciFiHelmet.gltf"></a-asset-item>
             </a-assets>
 
             <!-- handle hiro marker -->
