--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <li><a href="SmartCity-AR/task1.html">Task 1</a></li>
         <li><a href="SmartCity-AR/task2.html">Task 2 Complex objects</a></li>
 		<li><a href="SmartCity-AR/task3.html">Task 3 Embedded audio</a></li>
-		<li><a href="SmartCity-AR/task3V.html">Task 3 Embedded video</a></li>
+		<li><a href="SmartCity-AR/task3V.html">Task C Embedded video</a></li>
 		<li><a href="SmartCity-AR/task4.html">Task 4 Multiple markers</a></li>
 		
 		
