--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 <body>
     <ul>
         <!-- navigation to the solutions of tasks -->
-        <li><a href="SmartCity-AR/task1.html">Task 1</a></li>
+        <li><a href="SmartCity-AR/task1_1.html">Task 1 Torus Knot</a></li>
+		<li><a href="SmartCity-AR/task1_2.html">Task 1 Simple Object</a></li>
+		<li><a href="SmartCity-AR/task1_3.html">Task 1 Text</a></li>
         <li><a href="SmartCity-AR/task2.html">Task 2 Complex objects</a></li>
 		<li><a href="SmartCity-AR/task3.html">Task 3 Embedded audio</a></li>
 		<li><a href="SmartCity-AR/task3V.html">Task 3 Embedded video</a></li>
