--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<li><a href="SmartCity-AR/task1_3.html">Task 1 Text</a></li>
         <li><a href="SmartCity-AR/task2.html">Task 2 Complex objects</a></li>
 		<li><a href="SmartCity-AR/task3.html">Task 3 Embedded audio</a></li>
-		<li><a href="SmartCity-AR/task3V.html">Task 3V Embedded video</a></li>
+		<li><a href="SmartCity-AR/task3V.html">Task 3 Embedded video</a></li>
 		<li><a href="SmartCity-AR/task4.html">Task 4 Multiple markers</a></li>
 		
 		
