--- a/SmartCity-AR/task3V.html
+++ b/SmartCity-AR/task3V.html
@@ -9,7 +9,7 @@
             <a-assets>
                 <video id="helmet_video" autoplay loop="true" src="assets/helmet1.mp4" ></video>
             </a-assets>
-
+			<a-video src="#helmet_video" width="16" height="9" position="0 0 -20"></a-video>
             <!-- handle hiro marker -->
             <a-marker preset="hiro">
                 <!-- raw.githack.com serves raw files directly from GitHub,
