--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<li><a href="SmartCity-AR/task3.html">Task 3 Embedded audio</a></li>
 		<li><a href="SmartCity-AR/task3V.html">Task 3VV Embedded video</a></li>
 		<li><a href="SmartCity-AR/task4.html">Task 4 Multiple markers</a></li>
-		<li><a href="SmartCity-AR/task5.html">Task 5 Custom Marker</a></li>
+		<li><a href="SmartCity-AR/task5.html">Task 5C Custom Marker</a></li>
 		
 		
 
