--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<li><a href="SmartCity-AR/task3V.html">Task 3VV Embedded video</a></li>
 		<li><a href="SmartCity-AR/task4.html">Task 4 Multiple markers</a></li>
 		<li><a href="SmartCity-AR/task5.html">Task 5 Custom Marker</a></li>
-		<li><a href="SmartCity-AR/task6.html">Task 6 Location-based AR</a></li>
+		<li><a href="SmartCity-AR/task6.html">Task 6c Location-based AR</a></li>
 		
 		
 
