--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 		<li><a href="SmartCity-AR/task1_3.html">Task 1 Text</a></li>
         <li><a href="SmartCity-AR/task2.html">Task 2 Complex objects</a></li>
 		<li><a href="SmartCity-AR/task3.html">Task 3 Embedded audio</a></li>
-		<li><a href="SmartCity-AR/task3V.html">Task 3VV Embedded video</a></li>
+		<li><a href="SmartCity-AR/task3V.html">Task 3 Embedded video</a></li>
 		<li><a href="SmartCity-AR/task4.html">Task 4 Multiple markers</a></li>
 		<li><a href="SmartCity-AR/task5.html">Task 5 Custom Marker</a></li>
-		<li><a href="SmartCity-AR/task6.html">Task 6c Location-based AR</a></li>
+		<li><a href="SmartCity-AR/task6_1.html">Task 6 Location-based AR</a></li>
+		<li><a href="SmartCity-AR/task6_2.html">Task 6 Abs Location-based AR</a></li>
 		
 		
 
