--- a/SmartCity-AR/task6_2.html
+++ b/SmartCity-AR/task6_2.html
@@ -14,7 +14,7 @@
 		<a-sphere gps-entity-place="longitude: 37.469820; latitude: 55.153653"></a-sphere> -->
 		<!-- <a-sphere gps-entity-place="longitude:-6.2343797; latitude: 53.3431803" radius=2 color=red></a-sphere> -->
 
-		<a-sphere gps-entity-place="latitude: 47.5060164; longitude: 19.071227;"  radius=2 color=red></a-sphere>
+		<a-sphere gps-entity-place="latitude: 47.5107548; longitude: 19.0663476;"  radius=2 color=red></a-sphere>
 		<a-sphere gps-entity-place="latitude: 51.509192; longitude: -0.114623;"  radius=2 color=green></a-sphere>
 		
 		<a-camera id="camera" user-height="1.6" gps-camera-position gps-camera-rotation gps-camera-debug></a-camera>
