--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<li><a href="SmartCity-AR/task4.html">Task 4 Multiple markers</a></li>
 		<li><a href="SmartCity-AR/task5.html">Task 5 Custom Marker</a></li>
 		<li><a href="SmartCity-AR/task6_1.html">Task 6 Location-based AR</a></li>
-		<li><a href="SmartCity-AR/task6_2.html">Task 6 Abs Location-based AR</a></li>
+		<li><a href="SmartCity-AR/task6_2.html">Task 6A Abs Location-based AR</a></li>
 		
 		
 
