--- a/SmartCity-AR/task6_1.html
+++ b/SmartCity-AR/task6_1.html
@@ -15,8 +15,9 @@
       arjs="sourceType: webcam; debugUIEnabled: false;"
     >
       <a-text
-        value="Hey oh Listen what I say, oh"
+        value="Red Hot Chili Peppers"
         look-at="[gps-camera]"
+		scale="120 120 120"
       ></a-text>
       <a-camera gps-camera rotation-reader> </a-camera>
     </a-scene>
