--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<li><a href="SmartCity-AR/task5.html">Task 5 Custom Marker</a></li>
 		<li><a href="SmartCity-AR/task6_1.html">Task 6 Location-based AR</a></li>
 		<li><a href="SmartCity-AR/task6_2.html">Task 6 Abs Location-based AR</a></li>
-		<li><a href="SmartCity-AR/task7.html">Task 7 Image-based AR</a></li>
+		<li><a href="SmartCity-AR/task7.html">Task 7V Image-based AR</a></li>
 		
 		
 
