--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<li><a href="SmartCity-AR/task6_1.html">Task 6 Location-based AR</a></li>
 		<li><a href="SmartCity-AR/task6_2.html">Task 6 Abs Location-based AR</a></li>
 		<li><a href="SmartCity-AR/task7.html">Task 7 Image-based AR</a></li>
-		<li><a href="SmartCity-AR/task8.html">Task 8V Marker-based AR: interactive multimedia</a></li>
+		<li><a href="SmartCity-AR/task8.html">Task 8 Marker-based AR: interactive multimedia</a></li>
 		
 		
 
