--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 		<li><a href="SmartCity-AR/task6_2.html">Task 6 Abs Location-based AR</a></li>
 		<li><a href="SmartCity-AR/task7.html">Task 7 Image-based AR</a></li>
 		<li><a href="SmartCity-AR/task8.html">Task 850 Marker-based AR: interactive multimedia</a></li>
+		<li><a href="SmartCity-AR/task8.html">Task 9 Location-based AR: outdoor app</a></li>
 		
 		
 
