--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 		<li><a href="SmartCity-AR/task6_1.html">Task 6 Location-based AR</a></li>
 		<li><a href="SmartCity-AR/task6_2.html">Task 6 Abs Location-based AR</a></li>
 		<li><a href="SmartCity-AR/task7.html">Task 7 Image-based AR</a></li>
-		<li><a href="SmartCity-AR/task8.html">Task 852 Marker-based AR: interactive multimedia</a></li>
-		<li><a href="SmartCity-AR/task9.html">Task 9N Location-based AR: outdoor app</a></li>
+		<li><a href="SmartCity-AR/task8.html">Task 8-5  Marker-based AR: interactive multimedia</a></li>
+		<li><a href="SmartCity-AR/task9.html">Task 9s Location-based AR: outdoor app</a></li>
 		
 		
 
