--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <ul>
         <!-- navigation to the solutions of tasks -->
         <li><a href="SmartCity-AR/task1_1.html">Task 1 Torus Knot</a></li>
-		<li><a href="SmartCity-AR/task1_2.html">Task 1 Simple Object</a></li>
+		<li><a href="SmartCity-AR/task1_2.html">Task 1Text Simple Object</a></li>
 		<li><a href="SmartCity-AR/task1_3.html">Task 1 Text</a></li>
         <li><a href="SmartCity-AR/task2.html">Task 2 Complex objects</a></li>
 		<li><a href="SmartCity-AR/task3.html">Task 3 Embedded audio</a></li>
