--- a/SmartCity-AR/task1_2.html
+++ b/SmartCity-AR/task1_2.html
@@ -9,15 +9,7 @@
             <!-- handle hiro marker -->
             <a-marker preset='hiro'>
                     <a-sphere color="red" radius="0.1">
-					<a-text 
-            value="Asset Bekov"
-            color="Black"
-            rotation="0 90 0"
-            scale="7, 7"
-            position="-2.5 4 0"
-            z-offset="3"
-            faceUser: true;>
-        </a-text></a-sphere> 
+					</a-sphere> 
 					
             </a-marker>
 
