--- a/SmartCity-AR/task6_2.html
+++ b/SmartCity-AR/task6_2.html
@@ -16,12 +16,14 @@
     >	
       <a-icosahedron
         gps-entity-place="latitude: 47.5107548; longitude: 19.0663476;"
-		color="#FF926B" radius="1"
+		color="red" radius="1"
 			look-at="[gps-camera]"
       ></a-icosahedron>
       <a-camera gps-camera rotation-reader> </a-camera>
     </a-scene>
   </body>
 </html>
+
+  
 
   
