--- a/SmartCity-AR/task1_3.html
+++ b/SmartCity-AR/task1_3.html
@@ -8,7 +8,7 @@
         <a-scene embedded arjs>
             <!-- handle hiro marker -->
             <a-marker preset='hiro'>
-                    <a-text value="One Puuuuuuunch!" position="0 0 0" scale="2 2 2"></a-text>
+                    <a-text value="One Puuuuuuunch!" position="0 0 0" scale="2 2 2" rotation="0 90 0"></a-text>
             </a-marker>
 
             <!-- add a camera to the scene that renders the objects for us -->
